# ICP-Voice-NFT

./: README.md  dfx.json  package-lock.json  package.json  server.js  webpack.config.js
python/: ai_service.py  manager.py  worker.py
src/icp_hello_world_rust_backend/: Cargo.toml  icp_hello_world_rust_backend.did
src/icp_hello_world_rust_backend/src/: lib.rs
src/icp_hello_world_rust_backend/tests/: integration_tests.rs  test.py
src/icp_hello_world_rust_frontend/assets/: .ic-assets.json5
src/icp_hello_world_rust_frontend/src/: .ic-assets.json5  App.css  App.js  index.html
