[package]
name = "icp_hello_world_rust_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.3"
ic-cdk = "0.16.0"
ic-cdk-macros = "0.6.8"
ic-stable-structures = "0.5.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
include-base64 = "0.1"


[dev-dependencies]
pocket-ic = "4.0.0"
